--- a/web_site/journal.html
+++ b/web_site/journal.html
@@ -12,32 +12,50 @@
 </head>
 
 <body>
-
-	<h1>Victoria's Journal</h1>
-	<h2>So fresh and so clean</h2>
-
-	<h2>04/09/08: Spatulas</h2>
-	<p>
-		<img src="images/spatula.gif" alt="Much-needed spatula" />
-	</p>
-
-	<p>
-		Yesterday I went to the store and got some much-needed <a href="http://www.youtube.com/watch?v=2XbCWmY0eqY">spatulas</a>! (What better way to say I love myself than to buy myself a spatula?)
-	</p>
-
-	<h2>04/08/08: Cookie Monster Cupcakes</h2>
-	<p>
-		<img src="images/cookiemonster.jpg" alt="Cookie Monster: in cupcake form!" />
-	</p>
-
-	<p>
-		My favorite cartoon character is Cookie Monster, and my favorite dessert is cupcakes, so Cookie Monster cupcakes are the best of both worlds.
-	</p>
 	
+	<div id="main-container">
+		<div id="main-definition">
+			<h1>Victoria's Journal</h1>
+			<h2>So fresh and so clean</h2>
+		</div>
+		
+		<div class="page-content-definition">
+			<h2><span class="time">04/09/08:</span> Spatulas</h2>
+			<p>
+				<img class="content-image" src="images/spatula.gif" alt="Much-needed spatula" />
+			</p>
+		
+			<p>
+				Yesterday I went to the store and got some much-needed <a href="http://www.youtube.com/watch?v=2XbCWmY0eqY">spatulas</a>! (What better way to say I love myself than to buy myself a spatula?)
+			</p>
+		</div>
+		
+		<div class="page-content-definition">
+			<h2><span class="time">04/08/08:</span> Cookie Monster Cupcakes</h2>
+			<p>
+				<img class="content-image" src="images/cookiemonster.jpg" alt="Cookie Monster: in cupcake form!" />
+			</p>
+		
+			<p>
+				My favorite cartoon character is Cookie Monster, and my favorite dessert is cupcakes, so Cookie Monster cupcakes are the best of both worlds.
+			</p>
+				
+			<p>
+				Did you know? Cookie Monster once said, <q>Sometimes me think what is love, and then me think love is what last cookie is for. Me give up the last cookie for you.</q> I wonder if the same applies for cupcakes? (If so, I don't think I can ever love ANYONE!)
+			</p>
+		</div>
+	</div>
+
 	<p>
-		Did you know? Cookie Monster once said, <q>Sometimes me think what is love, and then me think love is what last cookie is for. Me give up the last cookie for you.</q> I wonder if the same applies for cupcakes? (If so, I don't think I can ever love ANYONE!)
-	</p>
+		<a href="http://validator.w3.org/check/referer">
+			<img src="http://www.w3.org/Icons/valid-xhtml11" alt="Validate"/>
+		</a>
 	
+		<a href="http://jigsaw.w3.org/css-validator/check/referer">
+			<img src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!"/>
+		</a>
+	</p>
+
 </body>
 
 </html>
